--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -146,7 +146,9 @@
 				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
 							class="badge text-bg-primary">Get Insurance Quote</span></a></div>-->
 				<div class="username-settings">
-	              <button onclick="goBack()"><span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span></button>
+	              <a th:href="@{/userPage/{username}(username=${c.username})}">
+						<span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span>
+					</a>
 	              <span class="username-text" th:text="${c.username}"></span>
 	            </div>
 	            <div class="select-type">
