--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -96,16 +96,16 @@
 	<!--			<strong>Renew Home Insurance</strong>-->
 	<!--		</button>-->
 
-	<!--		<script th:inline="javascript">-->
-	<!--			document.addEventListener("DOMContentLoaded", function () {-->
-	<!--				var showAbsent = /*[[${showAbsent}]]*/ [];-->
-	<!--				var renewButton = document.getElementById("renewButton");-->
+			<script th:inline="javascript">
+				document.addEventListener("DOMContentLoaded", function () {
+					var showAbsent = /*[[${showAbsent}]]*/ [];
+					var renewButton = document.getElementById("renewButton");
 
-	<!--				if (showAbsent) {-->
-	<!--					renewButton.disabled = true; // Butonu tıklanamaz yapar-->
-	<!--				}-->
-	<!--			});-->
-	<!--		</script>-->
+					if (showAbsent) {
+						renewButton.disabled = true; // Butonu tıklanamaz yapar
+					}
+				});
+			</script>
 
 
 	<!--		 Renew Home Insurance Modal -->
@@ -142,26 +142,32 @@
 	<div class="user-page-wrapper">
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
-				<!--<span class="username-text" th:text="${c.username}"></span>
-				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-							class="badge text-bg-primary">Get Insurance Quote</span></a></div>-->
 				<div class="username-settings">
-	              <a th:href="@{/userPage/{username}(username=${c.username})}">
+					<a th:href="@{/userPage/{username}(username=${c.username})}">
 						<span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span>
 					</a>
-	              <span class="username-text" th:text="${c.username}"></span>
-	            </div>
-	            <div class="select-type">
-	              <a href="#"><span class="badge text-bg-info">Insurance Renew</span></a>
-	            </div>
+					<span class="username-text" th:text="${c.username}"></span>
+				</div>
+				<!--				<div class="select-type">-->
+				<!--					<a href="#"><span class="badge text-bg-info">Renew Car Insurance</span></a>-->
+				<!--				</div>-->
+				<!--		 Button to trigger the modal -->
+				<form th:action="@{/renewHomeInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post">
+				<button type="submit" class="select-type" data-bs-toggle="modal" data-bs-target="#renewModal"
+					id="renewButton">
+					<span class="badge text-bg-info" >Renew Car Insurance</span>
+				</button>
+				</form>
 			</div>
+
 			<!--Alert Message-->
-			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert">
-          	  <i class='bx bxs-error' ></i>
-	          <div>
-	            An example warning alert with an icon
-	          </div>
-	        </div>
+			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert"
+				th:if="${showText} or ${showAlert} or ${showAbsent}">
+				<i class='bx bxs-error'></i>
+				<span th:if="${showText}"> An insurance for this house has already been defined! </span>
+				<span th:if="${showAlert}"> An insurance for this house has already been deleted or expired! </span>
+				<span th:if="${showAbsent}"> There is no insurance for this house!</span>
+			</div>
 	        
 			<div class="user-page">
 				<!-- User Bilgileri -->
