--- a/src/main/resources/templates/customerEdit.html
+++ b/src/main/resources/templates/customerEdit.html
@@ -5,27 +5,31 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Customer Edit</title>
-	
-	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	
+
+	<!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- İcon -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
+	<script src="js/angular.min.js"></script>
 	<!-- AngularJS ve jQuery kütüphaneleri -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-	
+
 	<script>
 		$(document).ready(function () {
 			$("#province").change(function () {
 				var provinceId = $("#province").val();
-				 $("#district").empty();
-				 
-				 // İlk olarak "Select District" seçeneğini ekliyoruz
+				$("#district").empty();
+
+				// İlk olarak "Select District" seçeneğini ekliyoruz
 				var defaultOption = $("<option>").val("").text("Select District*");
 				$("#district").append(defaultOption);
-				 
+
 				for (var i = 0; i < districtList.length; i++) {
 					if (districtList[i].sehirid == provinceId) {
 						var option = $("<option>").val(districtList[i].id).text(districtList[i].ilceadi);
@@ -38,96 +42,263 @@
 
 </head>
 
-<body ng-app="myApp">
+<body ng-app="myApp" ng-controller="registerFormController">
 
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">Logo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
-                    <i class='bx bxs-home'></i>
-                    Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
-        </div>
-      </nav>
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">Logo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/index">
+							<i class='bx bxs-home'></i>
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/index">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/#">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+			<div class="operations">
+				<a href="/login">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="/customerRegister">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
+		</div>
+	</nav>
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="registerCustomerFormController">
-			<div class="textIntro">
-				<h1 class="text-center">Customer Edit</h1>
-				<div class="alert alert-warning" role="alert" th:if="${showTcAlert}"> This TC number is already registered! </div>
-				<p ng-show="msg">{{msg}}</p>
+	<div class="page-wrapper bg-gra-02">
+		<div class="wrapper">
+			<div class="card">
+				<div class="card-body">
+					<h2 class="title mb-4">Customer Edit Form</h2>
+					<form th:action="@{/save}" th:object="${customer}" method="post" ng-submit="register()"
+						name="myForm">
+						<input type="hidden" name="customerId" th:value="${customer.customerId}" />
+						<!-- Fist -Last Name -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">First Name</div>
+										<div class="warning"
+											ng-show="myForm.firstname.$error.required && myForm.firstname.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Required.
+										</div>
+										<div class="warning"
+											ng-show="myForm.firstname.$error.pattern && myForm.firstname.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Only letters can be used.
+										</div>
+									</label>
+									<input type="text" ng-pattern="/^[a-zA-Z\s]*$/" ng-required="true" class="input-4"
+										id="firstname" name="firstname" maxlength="50"
+										onkeypress="return /[a-zA-ZçÇğĞıİöÖşŞüÜ\s]/i.test(event.key)"
+										th:value="${customer.firstname}">
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Last Name</div>
+										<div class="warning"
+											ng-show="myForm.lastname.$error.required && myForm.lastname.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Required.
+										</div>
+										<div class="warning"
+											ng-show="myForm.lastname.$error.pattern && myForm.lastname.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Only letters can be used.
+										</div>
+									</label>
+									<input type="text" ng-pattern="/^[a-zA-Z\s]*$/" ng-required="true" class="input-4"
+										id="lastname" name="lastname" maxlength="50"
+										onkeypress="return /[a-zA-ZçÇğĞıİöÖşŞüÜ\s]/i.test(event.key)"
+										th:value="${customer.lastname}">
+								</div>
+							</div>
+						</div>
+						<!-- Tc - Email -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">T.C.</div>
+										<div class="warning" ng-show="myForm.tc.$error.required && myForm.tc.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Required.
+										</div>
+										<div class="warning" ng-show="myForm.tc.$error.pattern && myForm.tc.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											T.C. must have 11 digits.
+										</div>
+									</label>
+									<input type="number" ng-required="true" class="input-4" id="tc" name="tc"
+										ng-pattern="/^\d{11}$/" onKeyPress="if(this.value.length==11) return false;"
+										th:value="${customer.tc}">
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Email</div>
+										<div class="warning" ng-show="myForm.email.$invalid && myForm.email.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Enter a valid email address.
+										</div>
+									</label>
+									<input type="email" ng-required="true" class="input-4" id="email" name="email"
+										th:value="${customer.email}">
+								</div>
+							</div>
+						</div>
+						<!-- Username - Password -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Username</div>
+										<div class="warning"
+											ng-show="myForm.username.$invalid && myForm.username.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<input type="text" ng-required="true" class="input-4" id="username" name="username"
+										maxlength="50" th:value="${customer.username}">
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Password</div>
+										<div class="warning" ng-show="passwordError">
+											<i class='bx bxs-error-alt'></i>
+											<p>{{ passwordError }}</p>
+										</div>
+									</label>
+									<input type="password" ng-required="true" id="password" class="input-4"
+										name="password" ng-change="validatePassword()" th:value="${customer.password}">
+									<button type="button" class="hide-pass" onclick="togglePasswordVisibility()">
+										<i class='bx bxs-hide' id="hideIcon" style="display: none;"></i>
+										<i class='bx bx-show' id="showIcon"></i>
+									</button>
+								</div>
+							</div>
+						</div>
+						<!-- Birthday - Phone Number -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Birthday</div>
+										<div class="warning" ng-show="myForm.birth.$invalid && myForm.birth.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<input type="date" ng-required="true" class="input-4" name="birth" id="birth"
+										th:value="${customer.birth}">
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Phone Number</div>
+										<div class="warning"
+											ng-show="myForm.phoneNumber.$error.required && myForm.phoneNumber.$touched">
+											<i class='bx bxs-error-alt'></i>
+											Required.
+										</div>
+										<div class="warning"
+											ng-show="myForm.phoneNumber.$error.pattern && myForm.phoneNumber.$dirty">
+											<i class='bx bxs-error-alt'></i>
+											Phone number must have 11 digits.
+										</div>
+									</label>
+									<input type="number" ng-model="phoneNumber" ng-required="true" class="input-4"
+										name="phoneNumber" id="phoneNumber" ng-pattern="/^\d{11}$/"
+										onKeyPress="if(this.value.length==11) return false;"
+										th:value="${customer.phoneNumber}">
+								</div>
+							</div>
+						</div>
+						<!-- Select İl - İlçe -->
+						<div class="row">
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">Province</div>
+										<div class="warning"
+											ng-show="myForm.province.$error.required && myForm.province.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<select class="form-select" name="province" id="province" ng-required="true"
+										aria-label="Default select example">
+										<option th:value="${customer.province}" th:text="${customer.province}"
+											th:selected="${#fields.hasErrors('province')}">Select Province*</option>
+										<option th:each="province : ${getAllProvinces}" th:value="${province.id}"
+											th:text="${province.sehiradi}"></option>
+									</select>
+								</div>
+							</div>
+							<div class="col-2">
+								<div class="input-group">
+									<label class="label">
+										<div class="txt">District</div>
+										<div class="warning"
+											ng-show="myForm.district.$error.required && myForm.district.$touched">
+											<i class='bx bxs-error-alt'></i>
+											<p>Required</p>
+										</div>
+									</label>
+									<select class="form-select" name="district" id="district" ng-required="true"
+										aria-label="Default select example">
+										<option th:value="${customer.district}" th:text="${customer.district}"
+											>Select District*
+										</option>
+									</select>
+								</div>
+							</div>
+						</div>
+
+						<script th:inline="javascript">
+							var districtList = /*[[${getAllDistricts}]]*/[];
+						</script>
+
+						<!-- Submit -->
+						<div class="button">
+							<button class="btn btn-submit">Submit</button>
+						</div>
+						<!-- alert -->
+						<div class="alert alert-warning" role="alert" th:if="${showTcAlert}">This TC number is already registered!</div>
+					</form>
+				</div>
 			</div>
-
-			<form th:action="@{/save}" th:object="${customer}" method="post" name="myForm">
-				
-				<input type="hidden" name="customerId" th:value="${customer.customerId}"/>
-				<input type="text" name="tc" placeholder="TC Number*" ng-required="true" ng-pattern="/^[0-9]*$/" minlength="11"
-					maxlength="11" th:value="${customer.tc}">
-				<p class="error" ng-show="myForm.tc.$invalid && myForm.tc.$touched">Fill out your TC number correctly.</p>
-
-				<input type="date" name="birth" placeholder="Birth Date*" ng-required="true" th:value="${customer.birth}" id="birth">
-				<p class="error" ng-show="myForm.birth.$invalid && myForm.birth.$touched">Fill out your Birth Date.</p>
-
-				<input type="text" name="email" placeholder="Email*" ng-required="true" th:value="${customer.email}">
-				<p class="error" ng-show="myForm.email.$invalid && myForm.email.$touched">Enter your corrent email.</p>
-
-				<input type="text" name="firstname" placeholder="First Name*" ng-required="true" th:value="${customer.firstname}">
-				<p class="error" ng-show="myForm.firstname.$invalid && myForm.firstname.$touched">Fill out your first
-					name.</p>
-
-				<input type="text" name="lastname" placeholder="Last Name*" ng-required="true" th:value="${customer.lastname}">
-				<p class="error" ng-show="myForm.lastname.$invalid && myForm.lastname.$touched">Fill out your last name.
-				</p>
-				
-				<select name="province" id="province">
-					<option th:value="${customer.province}" th:text="${customer.province}" th:selected="${#fields.hasErrors('province')}">Select Province*</option>
-					<option th:each="province : ${getAllProvinces}" th:value="${province.id}"
-						th:text="${province.sehiradi}"></option>
-				</select>
-				<p th:if="${#fields.hasErrors('province')}" th:errorclass="error" th:errors="*{province}" />
-
-				<select name="district" id="district">
-					<option th:value="${customer.district}" th:text="${customer.district}" th:selected="${#fields.hasErrors('district')}">Select District*</option>
-				</select>
-				<p th:if="${#fields.hasErrors('district')}" th:errorclass="error" th:errors="*{district}" />
-
-				<script th:inline="javascript">
-					var districtList = /*[[${getAllDistricts}]]*/[];
-				</script>
-
-				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Submit</button>
-			</form>
 		</div>
-	</section>
-	
+	</div>
+
 	<!-- Footer -->
 	<footer class="mt-4 py-4">
 		<div class="row container mx-auto pt-4">
@@ -153,7 +324,7 @@
 				</div>
 				<div>
 					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/edamuutlu</p>
 					<p>https://github.com/nuricanbrdmr</p>
 				</div>
 				<div>
