--- a/src/main/resources/templates/trafficInsuranceForm.html
+++ b/src/main/resources/templates/trafficInsuranceForm.html
@@ -1,22 +1,26 @@
-<!doctype html>
-<html lang="en" xmlns:th"http://www.thymeLeaf.org">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Traffic Insurance Form</title>
-	
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Traffic Insurance Form</title>
+    <!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- İcon -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
-<body ng-app="myApp">
-
-	<!--Navbar-->
+<body ng-app="myApp" ng-controller="trafficInsuranceFormController">
+        <!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
@@ -26,16 +30,16 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
+                <a class="nav-link active" aria-current="page" href="#">
                     <i class='bx bxs-home'></i>
                     Home
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
+                <a class="nav-link" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
+                <a class="nav-link" href="#">Features</a>
               </li>
             </ul>
           </div>
@@ -54,86 +58,160 @@
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="trafficInsuranceFormController">
-			<div class="textIntro">
-				<h1 class="text-center">Traffic Insurance Form</h1>
-				<p ng-show="msg">{{msg}}</p>
-				<div class="alert alert-warning" role="alert" th:if="${showPlateAlert}"> This license plate number is already registered! </div>
-			</div>
-
-			<form th:action="@{/carRegister}" th:object="${car}" method="post" name="myForm" ng-submit="register()">
-
-				<input type="hidden" name="customerId" th:value="${customerId}" />
-				<div style=" display: flex; flex-direction: row;">
-					<h4 class="mr-2">Customer Id : </h4>
-					<h4 th:text="${customerId}">idParam</h4>
-				</div>
-
-				<div class="d-flex justify-content-between mt-3">
-					<label>Enter your licence plate number: </label>
-					<div>
-						<input type="number" name="plate1" ng-model="plate1" ng-required="true"
-							onKeyPress="if(this.value.length==2) return false;">
-						<p class="error" ng-show="myForm.plate1.$invalid && myForm.plate1.$touched">
-							Invalid input.</p>
-					</div>
-					<div>
-						<input type="text" name="plate2" ng-model="plate2" ng-required="true"
-							ng-pattern="/^[a-zA-Z]*$/" minlength="1" maxlength="3">
-						<p class="error" ng-show="myForm.plate2.$invalid && myForm.plate2.$touched">
-							Invalid input.</p>
-					</div>
-					<div>
-						<input type="number" name="plate3" ng-model="plate3" ng-required="true"
-							onKeyPress="if(this.value.length==4) return false;">
-						<p class="error" ng-show="myForm.plate3.$invalid && myForm.plate3.$touched">
-							Invalid input.</p>
-					</div>
-				</div>
-
-				<select name="type" ng-model="type" ng-required="true">
-					<option value="">Select Usage Type*</option>
-					<option ng-repeat="option in types" value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="purpose" ng-model="purpose" ng-required="true">
-					<option value="">Select Purpose of Usage*</option>
-					<option ng-repeat="option in purposes" value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="brand" ng-model="brand" ng-required="true">
-					<option value="">Select Brand*</option>
-					<option ng-repeat="option in brands" value="{{option}}">{{option}}</option>
-				</select>
-
-				<select name="fuelType" ng-model="fuelType" ng-required="true">
-					<option value="">Select Fuel Type*</option>
-					<option ng-repeat="option in fuelTypes" value="{{option}}">{{option}}</option>
-				</select>
-
-				<input type="number" name="engineSize" placeholder="Engine Size*" ng-model="engineSize"
-					ng-required="true">
-				<p class="error" ng-show="myForm.engineSize.$invalid && myForm.engineSize.$touched">Fill out your
-					engine size.</p>
-
-				<input type="number" name="seatCapacity" placeholder="Seating Capacity*" ng-model="seatCapacity"
-					ng-required="true" minlength="1">
-				<p class="error" ng-show="myForm.seatCapacity.$invalid && myForm.seatCapacity.$touched">Fill out your
-					seating capacity.</p>
-
-				<select name="period" ng-model="period" ng-required="true">
-					<option value="">Select Insurance Period (Day)*</option>
-					<option ng-repeat="option in periods" value="{{option}}">{{option}}</option>
-				</select>
-
-				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Prepare My Offer</button>
-			</form>
-		</div>
-	</section>
-	
-	<!-- Footer -->
-	<footer class="mt-4 py-4">
+    <div class="page-wrapper bg-gra-02">
+        <div class="wrapper">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="title">Traffic Insurance Form</h2>
+                    <span class="customer-id mb-3">Customer Id: <span th:text="${customerId}"></span></span>
+                    <form th:action="@{/carRegister}" th:object="${car}" method="post" name="myForm" ng-submit="register()">
+						<input type="hidden" name="customerId" th:value="${customerId}" />
+                        <!-- Plate Number -->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Enter your licence plate number</div>
+                                        <div class="warning" ng-show="myForm.plate1.$invalid && myForm.plate1.$touched || myForm.plate2.$invalid && myForm.plate2.$touched
+                                        || myForm.plate3.$invalid && myForm.plate3.$touched">
+                                            <i class='bx bxs-error-alt'></i>
+                                            <p>Required</p>
+                                        </div>
+                                    </label>
+                                    <div class="plane-group">
+                                        <input type="number" class="input-4" name="plate1" ng-model="plate1" ng-required="true" onKeyPress="if(this.value.length==2) return false;">
+                                        <input type="text" class="input-4" name="plate2" ng-model="plate2" ng-required="true" ng-pattern="/^[a-zA-Z]*$/" minlength="1" maxlength="3">
+                                        <input type="number" class="input-4" name="plate3" ng-model="plate3" ng-required="true" onKeyPress="if(this.value.length==4) return false;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Type - Purpose -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Usage Type</div>
+                                            <div class="warning" ng-show="myForm.type.$error.required && myForm.type.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="type" ng-model="type" ng-required="true">
+                                        <option selected value="">Type</option>
+                                        <option ng-repeat="option in types" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Purpose of Usage</div>
+                                            <div class="warning" ng-show="myForm.purpose.$error.required && myForm.purpose.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="purpose" ng-model="purpose" ng-required="true">
+                                        <option selected value="">Purpose</option>
+										<option ng-repeat="option in purposes" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Brand - Fuel -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Brand</div>
+                                            <div class="warning" ng-show="myForm.brand.$error.required && myForm.brand.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="brand" ng-model="brand" ng-required="true">
+                                        <option selected value="">Brand</option>
+										<option ng-repeat="option in brands" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Fuel Type</div>
+                                            <div class="warning" ng-show="myForm.fuelType.$error.required && myForm.fuelType.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="fuelType" ng-model="fuelType" ng-required="true">
+                                        <option selected value="">Fuel Type</option>
+										<option ng-repeat="option in fuelTypes" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Engine - Capacity -->
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Engine Size</div>
+                                        <div class="warning" ng-show="myForm.engineSize.$invalid && myForm.engineSize.$touched">
+                                            <i class='bx bxs-error-alt'></i>
+                                            <p>Required</p>
+                                        </div>
+                                    </label>
+                                    <input type="number" name="engineSize" placeholder="Engine Size*" ng-model="engineSize" ng-required="true" class="input-4">
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Seating Capacity</div>
+                                        <div class="warning" ng-show="myForm.seatCapacity.$invalid && myForm.seatCapacity.$touched">
+                                            <i class='bx bxs-error-alt'></i>
+                                            <p>Required</p>
+                                        </div>
+                                    </label>
+                                    <input type="number" name="seatCapacity" placeholder="Seating Capacity*" ng-model="seatCapacity" ng-required="true" minlength="1" class="input-4">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Period -->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <label class="label">
+                                        <div class="txt">Select Insurance Period (Day)</div>
+                                            <div class="warning" ng-show="myForm.period.$error.required && myForm.period.$touched">
+                                                <i class='bx bxs-error-alt'></i>
+                                                <p>Required</p>
+                                            </div>
+                                    </label>
+                                    <select class="form-select" name="period" ng-model="period" ng-required="true">
+                                        <option selected value="">Period</option>
+										<option ng-repeat="option in periods" value="{{option}}">{{option}}</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Submit -->
+                        <div class="button" type="submit" ng-disabled="myForm.$invalid">
+                            <button class="btn btn-submit">Prepare My Offer</button>
+                        </div>
+                        <!-- alert -->
+                        <div th:if="${showPlateAlert}" class="alert alert-warning" role="alert">
+                            This license plate number is already registered!
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -179,25 +257,13 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-
-	<script src="/js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
-
 </html>
