Health From, CustomerList css and new avatar img
Health From Frontedn uptade and CustomerList css code add and new user avatar img add

--- a/src/main/resources/templates/healthInsuranceForm.html
+++ b/src/main/resources/templates/healthInsuranceForm.html
@@ -147,9 +147,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- smoking - SGK -->
+                        <!-- smoking -->
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-12">
                                 <div class="input-group">
                                     <label class="label">
                                         <div class="txt">Do you have habits such as alcohol or smoking?</div>
@@ -168,7 +168,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-2">
+                        </div>
+                         <!-- SGK -->
+                        <div class="row">
+                            <div class="col-12">
                                 <div class="input-group">
                                     <label class="label">
                                         <div class="txt">Do you have SGK?</div>
