--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -226,6 +226,7 @@ body .page-wrapper .wrapper .card .card-body .row .col-12 {
 body .page-wrapper .wrapper .card .card-body .row .col-12 .input-group {
   position: relative;
   margin-bottom: 22px;
+  justify-content: space-between;
 }
 body .page-wrapper .wrapper .card .card-body .row .col-12 .input-group .label {
   font-size: 14px;
@@ -328,7 +329,6 @@ body .page-wrapper .wrapper .card .card-body .row .col-12 .input-group .radio-bu
   display: flex;
   justify-content: end;
   align-items: center;
-  width: 50%;
 }
 body .page-wrapper .wrapper .card .card-body .row .col-12 .input-group .radio-buttons label {
   display: flex;
@@ -484,6 +484,7 @@ body .user-page-wrapper .user-page-main .user-page {
   height: 90%;
   padding: 5px;
   display: flex;
+  min-height: 660px;
 }
 @media (max-width: 1000px) {
   body .user-page-wrapper .user-page-main .user-page {
@@ -607,6 +608,74 @@ body .user-page-wrapper .user-page-main .user-page .user-insurances .card .table
   color: rgb(255, 62, 62);
 }
 body .user-page-wrapper .user-page-main .user-page .user-insurances .card .table th {
+  text-align: center;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin {
+  width: 100%;
+}
+@media (max-width: 1000px) {
+  body .user-page-wrapper .user-page-main .user-page .user-insurances-admin {
+    width: 100%;
+  }
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card {
+  height: 100%;
+  max-height: 725px;
+  overflow-y: auto;
+}
+@media (max-width: 1585px) {
+  body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card {
+    max-height: 725px;
+    overflow-x: auto;
+    overflow-y: auto;
+  }
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table {
+  width: 98%;
+  margin: 0 auto 5px;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td {
+  padding: 0;
+  font-size: 14px;
+  max-width: 11ch;
+  word-wrap: break-word;
+  padding: 3px 2px;
+  text-align: center;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .badge {
+  font-weight: 500;
+  font-size: 14px;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .badge:hover {
+  background-color: rgba(13, 110, 253, 0.7411764706) !important;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button {
+  border: none;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .dots {
+  color: #0d6efd;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .dots:hover {
+  color: rgba(69, 112, 222, 0.6784313725);
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .edit {
+  color: blue;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .edit:hover {
+  color: rgb(69, 112, 222);
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .trash {
+  color: #bd0000;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .trash:hover {
+  color: rgb(255, 62, 62);
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table th {
   text-align: center;
 }
 body footer {
